<resources>
    <string name="app_name">GithubApp</string>
    <string name="username">%s </string>
    <string name="name">Name : %s </string>
    <string name="location">%s </string>
    <string name="repository">%s </string>
    <string name="company"> %s </string>
    <string name="followers">%s Followers</string>
    <string name="following">%s Following</string>
    <string name="avatar">Avatar</string>
    <string name="temp_repo_name">Repo Name</string>
    <string name="temp_repo_detail">Repository Details here</string>
    <string name="temp_number">0</string>
    <string name="temp_category_name">Category Name</string>
    <string name="details">Details</string>
    <string name="email">%s</string>
    <string name="follow">FOLLOW</string>
    <string name="temp_link">link.com</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="link">
        <item>https://www.linkedin.com/in/JakeWharton/</item>
        <item>https://www.linkedin.com/in/amitshekhariitbhu/</item>
        <item>https://www.linkedin.com/in/romainguy/</item>
        <item>https://www.linkedin.com/in/chrisbanes/</item>
        <item>https://www.linkedin.com/in/tipsy/</item>
        <item>https://www.linkedin.com/in/ravi8x/</item>
        <item>https://www.linkedin.com/in/jasoet/</item>
        <item>https://www.linkedin.com/in/budioktaviyan/</item>
        <item>https://www.linkedin.com/in/hendisantika/</item>
        <item>https://www.linkedin.com/in/sidiqpermana/</item>
        <item>https://www.linkedin.com/in/patricia-fiona-6132861a3/</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="email">
        <item>jakeWharton@gmail.com</item>
        <item>amitshekhariitbhu@gmail.com</item>
        <item>romainguy@gmail.com</item>
        <item>chrisbanes@gmail.com</item>
        <item>tipsy@gmail.com</item>
        <item>ravi8x@gmail.com</item>
        <item>jasoet@gmail.com</item>
        <item>budioktaviyan@gmail.com</item>
        <item>hendisantika@gmail.com</item>
        <item>sidiqpermana@gmail.com</item>
        <item>patriciafiona3@gmail.com</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
</resources>
