<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Top section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">
                    <ImageView
                        android:id="@+id/detail_user_background_animated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@color/grey_600" />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg_dark" />
                </FrameLayout>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_user_avatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="76dp"
                    android:src="@color/blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/detail_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.7"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/detail_user_avatar"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/detail_user_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintWidth_percent="0.7"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/white_50"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/detail_user_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/detail_user_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Bottom section - CardView -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="20dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp">

                    <ImageView
                        android:id="@+id/detail_icon_star"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_star_outline_grey_24"
                        app:layout_constraintBottom_toTopOf="@+id/detail_user_starred"
                        app:layout_constraintEnd_toStartOf="@+id/detail_icon_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/detail_user_starred"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_number"
                        android:textColor="@color/grey_800"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/detail_appSize_sm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_icon_star"
                        app:layout_constraintWidth_percent="0.3" />

                    <ImageView
                        android:id="@+id/detail_icon_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:layout_constraintBottom_toTopOf="@+id/detail_appSize_sm"
                        app:layout_constraintEnd_toStartOf="@+id/detail_icon_repositories"
                        app:layout_constraintStart_toEndOf="@+id/detail_icon_star"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.4" />

                    <TextView
                        android:id="@+id/detail_user_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/location"
                        android:textColor="@color/grey_800"
                        android:textAlignment="center"
                        android:maxLines="2"
                        android:ellipsize="end"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/detail_user_repositories"
                        app:layout_constraintStart_toEndOf="@+id/detail_user_starred"
                        app:layout_constraintTop_toBottomOf="@+id/detail_icon_location"
                        app:layout_constraintWidth_percent="0.4" />

                    <ImageView
                        android:id="@+id/detail_icon_repositories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_book__grey_24"
                        app:layout_constraintBottom_toTopOf="@+id/detail_user_repositories"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/detail_icon_location"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:id="@+id/detail_user_repositories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temp_number"
                        android:textColor="@color/grey_800"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/detail_user_location"
                        app:layout_constraintTop_toBottomOf="@+id/detail_icon_repositories"
                        app:layout_constraintWidth_percent="0.3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="30dp"
                    android:paddingHorizontal="20dp">
                    <TextView
                        android:id="@+id/text_details_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/details"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <ImageView
                        android:id="@+id/detail_icon_businnes"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/ic_baseline_business_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />
                    <TextView
                        android:id="@+id/detail_company"
                        style="@style/CompanyUserTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/company"
                        android:textColor="@color/grey_800"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/detail_icon_email"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="80dp"
                        android:src="@drawable/ic_baseline_email_grey_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />
                    <TextView
                        android:id="@+id/detail_user_email"
                        style="@style/CompanyUserTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="80dp"
                        android:text="@string/email"
                        android:textColor="@color/grey_800"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/detail_icon_users"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="120dp"
                        android:src="@drawable/ic_baseline_person_outline_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />
                    <TextView
                        android:id="@+id/detail_user_followers"
                        style="@style/CompanyUserTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="120dp"
                        android:text="@string/email"
                        android:textColor="@color/grey_800"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/detail_icon_following"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="160dp"
                        android:src="@drawable/ic_baseline_dot_grey_10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.3" />
                    <TextView
                        android:id="@+id/detail_user_following"
                        style="@style/CompanyUserTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="160dp"
                        android:text="@string/email"
                        android:textColor="@color/grey_800"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_follow"
                    style="@style/ButtonGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/follow"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

            </LinearLayout>
</ScrollView>